# ChangeLog for xfce-extra/thunar-shares-plugin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-shares-plugin/ChangeLog,v 1.4 2010/01/15 02:40:14 ssuominen Exp $

  15 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  thunar-shares-plugin-0.2.0.ebuild:
  Restrict deps to old xfce-base/thunar.

  06 Sep 2009; Jeremy Olexa <darkside@gentoo.org>
  thunar-shares-plugin-0.2.0.ebuild:
  amd64 stable, bug 281372

  26 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  thunar-shares-plugin-0.2.0.ebuild:
  stable x86, bug 281372

*thunar-shares-plugin-0.2.0 (23 Aug 2009)

  23 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
  +thunar-shares-plugin-0.2.0.ebuild, +metadata.xml:
  ebuild rewrite to fix many small issues, convert to xfconf.eclass. pkgmove
  from xfce-extra/thunar-shares

*thunar-shares-0.2.0 (15 Feb 2009)

  15 Feb 2009; Christoph Mende <angelos@gentoo.org>
  +thunar-shares-0.2.0.ebuild, -thunar-shares-0.16.ebuild:
  Version bump

*thunar-shares-0.16 (01 Dec 2008)

  01 Dec 2008; Christoph Mende <angelos@gentoo.org>
  +thunar-shares-0.16.ebuild:
  Initial import, bug 248265
