@@ -1,4 +1,6 @@
 DIST thunar-shares-plugin-0.2.0.tar.gz 342861 RMD160 c5bfb26aea04bf3555f8f2146d777dee3052f575 SHA1 c890d970c57ee5da422022f354873f167be30a20 SHA256 aec1e7e9979a9d9b4d244e460a4a78cff71f1795611df5f87b9c7dfac5d2de9e
+DIST thunar-shares-plugin-0.2.0_p20101105.tar.bz2 686286 RMD160 04dfee8b4362f69d3153afaddc6d1ae18108f28d SHA1 2efbbc6c2e8999357d6b5f6be1819291c6b0edc3 SHA256 cc7ead616f4ed16cf8375f548d1a2a42303fd6c3ab34b4600ae8ca6f469a2054
 EBUILD thunar-shares-plugin-0.2.0.ebuild 707 RMD160 7c9f53103dd3faf73372b7cb4a9eb62f3c3c943f SHA1 b1695743ab3fccc106ca987cfb437357753bfd27 SHA256 beb7440cca294dbb32d33e072ea97e3e4028f0ae3f6e84868a40ff1a780e63c3
-MISC ChangeLog 1170 RMD160 ed60921c0664166f02f22256ce6f8917275a4b60 SHA1 e15382c1de71e031394c626fcd6c4c433b72449e SHA256 6d0cb5c319b5203120e5a89c205286ae3278e01f6cdb6133ae8c45bf66b0abc6
+EBUILD thunar-shares-plugin-0.2.0_p20101105.ebuild 924 RMD160 02ad9aa7ddfe7fa1d6a5fdabb78aaa55df2ed5eb SHA1 0e018e5703a40755d18e337a514c37811b5a6607 SHA256 d9f857daba182f7cf527db31f4b48287576fdfc2a6093bb085601bad5abfa06c
+MISC ChangeLog 1360 RMD160 57138eaed83d1b922f0db1d8313d7825911200e6 SHA1 8c5b1c865d7d0f74ce5c61d79e91103dffa97b61 SHA256 3c563638f93a2947bf5c8fc654fe72c5948813b99b47e43e6812f79fe79b33a7
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
