@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/thunar-shares-plugin
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-shares-plugin/ChangeLog,v 1.4 2010/01/15 02:40:14 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-shares-plugin/ChangeLog,v 1.5 2010/11/05 15:08:52 ssuominen Exp $
+
+*thunar-shares-plugin-0.2.0_p20101105 (05 Nov 2010)
+
+  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
+  +thunar-shares-plugin-0.2.0_p20101105.ebuild:
+  Snapshot from thunarx-2 branch.
 
   15 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
   thunar-shares-plugin-0.2.0.ebuild:
